# hydroponics

./: .gitignore  .travis.sh  .travis.yml  BUILD.bazel  Jenkinsfile  LICENSE  README.md  WORKSPACE  release.sh
cmd/s3cache/: BUILD.bazel  config.go  logger.go  main.go
docs/: cache.md
internal/cache/: BUILD.bazel  cache.go
internal/cache/cachetest/: BUILD.bazel  cachetest.go
internal/cache/httphandler/: BUILD.bazel  handler.go  handler_test.go
internal/cache/memory/: BUILD.bazel  memory.go  memory_test.go
internal/cache/s3/: BUILD.bazel  io.go  s3.go
internal/pipes/: BUILD.bazel  chunk.go  pipes.go  pipes_test.go
internal/signals/: BUILD.bazel  notify.go  signals_default.go  signals_unix.go
