load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["s3.go"],
    importpath = "github.com/zenreach/hydroponics/internal/cache/s3",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/cache:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/awserr:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/session:go_default_library",
        "@com_github_aws_aws_sdk_go//service/s3:go_default_library",
        "@com_github_aws_aws_sdk_go//service/s3/s3manager:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_zenreach_hatchet//:go_default_library",
    ],
)
